--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
   <p>This section allows SME Corporation staff to view submitted business registrations, coaching requests, and tax applications.</p>
   <h3>Recent Business Registrations</h3>
   <table>
-    <tr><th>Business Name</th><th>Owner</th><th>Email</th><th>Status</th></tr>
+    <tr><th>Bu5siness Name</th><th>Owner</th><th>Email</th><th>Status</th></tr>
     <tr><td>Sunrise Bakery</td><td>Mary Kila</td><td>maryk@example.com</td><td>Pending</td></tr>
     <tr><td>Papua Crafts</td><td>Tom Kora</td><td>tomk@example.com</td><td>Approved</td></tr>
   </table>
